--- a/css/blogdetail.css
+++ b/css/blogdetail.css
@@ -5,3 +5,7 @@ section.blogdetail_page {
 .blogdetail_content {
     padding: 3rem 2rem;
 }
+
+.blogdetail_content small {
+    font-family: "Poppins";
+}
