--- a/css/mystory.css
+++ b/css/mystory.css
@@ -19,6 +19,19 @@ section.inspiring_sec {
     padding: 5rem 0;
 }
 
+.inspiring_content h3 {
+    font-size: 40px;
+}
+
+.inspiring_content span.font_italic {
+    font-size: 40px;
+}
+
 section.story_banner {
     padding-bottom: 1rem;
+}
+
+section.inspiring_sec img {
+    width: 100%;
+    height: 600px;
 }
