--- a/css/mystory.css
+++ b/css/mystory.css
@@ -32,19 +32,29 @@ section.story_banner {
     padding-bottom: 1rem;
 }
 
-section.inspiring_sec img {
+/* section.inspiring_sec img {
     width: 480px;
     height: 600px;
+} */
+.inspiring_content{
+    margin-top: 10px;
 }
-
 .inspiring_img {
     text-align: right;
 }
 p.top_text {
     font-family: 'calvino_l';
     font-size: 16px;
+    padding: 0 160px;
 }
 h2.top_heading {
     font-family: 'calvino_sb';
     font-size: 40px;
+}
+.inspiring_img img {
+    padding-left: 50px;
+}
+.inspiring_content p{
+	font-size: 16px;
+	font-family: "calvino_l";
 }
