--- a/css/blog.css
+++ b/css/blog.css
@@ -54,6 +54,7 @@ p {
     margin-bottom: 0px;
     font-family: 'calvino_l';
     font-size: 13px;
+    text-shadow: 0 0 black;
 }
 .text_box {
     padding: 16px 15px 22px;
