--- a/css/style.css
+++ b/css/style.css
@@ -441,7 +441,7 @@ p.para1 {
 	text-decoration: none;
 	/* font-weight: 400; */
 	text-transform: inherit;
-	font-family: "calvino_b";
+	font-family: "calvino_sb";
 	text-transform: uppercase;
 }
 
