--- a/css/contact.css
+++ b/css/contact.css
@@ -7,7 +7,7 @@
 .content_left h4 {
     margin-bottom: 0;
     line-height: 1;
-    font-family: "calvino_b";
+    font-family: "calvino_sb";
 }
 
 .left_content {
